# ns3-free5gc-integration

./: .gitignore  QA.md  README.md  pyproject.toml
adapters/: __init__.py
adapters/free5gc_ueransim/: __init__.py  bridge_setup.py  compose_override.py  subscriber_bootstrap.py
bridge/: __init__.py  policy_acceptor.py
bridge/common/: __init__.py  graph_adapter.py  ids.py  scenario.py  schema.py  topology.py  ue_context_adapter.py
bridge/orchestrator/: __init__.py  cli.py  config_renderer.py  process_plan.py
bridge/writer/: __init__.py  cli.py  graph_mapper.py  http_sink.py  local_store.py  log_parser.py  (+1 more)
docs/: WEEKLY_REPORT_1UE_1GNB_1UPF.md  start_graph_stack.md
scenarios/: baseline_multi_ue.yaml  baseline_single_upf.yaml  baseline_single_upf_inline_smoke.yaml  baseline_ulcl.yaml  baseline_ulcl_multi_gnb.yaml  baseline_ulcl_multi_slice_multi_gnb.yaml  baseline_ulcl_multi_ue.yaml  graph_snapshot_real.yaml  graph_snapshot_real_smoke.yaml  new_scenatios.yaml  policy_graph_multi_gnb.yaml  policy_graph_multi_gnb_smoke.yaml  s1_basic_single_slice.yaml  s2_medium_complexity.yaml  s3_high_complexity.yaml
scripts/: bootstrap_app_data.py  build_ns3_twin.sh  render_run.py  run_graph_smoke.py  run_ns3_twin.sh  run_policy_acceptor.sh  run_real_ue_flows.py  start_graph_stack.py  start_stack.py  ue_udp_sender.c
tests/: __init__.py  test_graph_adapter.py  test_graph_mapper.py  test_graph_store.py  test_log_parser.py  test_policy_acceptor.py  test_real_ue_flows.py  test_renderer.py  test_schema.py  test_subscriber_bootstrap.py  test_topology.py  test_writer.py
(+7 files in other folders)
